uploads: fix preview image resizing.
* Fix preview images not being resized to fit the screen when using the
  bookmarklet.

* Fit images to both screen width and height by default. Previously we
  fit to screen width only, so tall images were hard to see.

* Allow clicking on the image or pressing Z to toggle image size.

* Move size information to above the image and add resize links:
** small: fit width and height
** large: fit width
** full: fit none

* Bind the image error handler in an onerror attribute on the image
  itself so that it will always fire. Before it wouldn't fire if the image
  failed immediately on pageload before we could bind the error handler.

--- a/app/javascript/src/styles/specific/uploads.scss
+++ b/app/javascript/src/styles/specific/uploads.scss
@@ -1,5 +1,49 @@
 div#c-uploads {
   div#a-new {
+    #no-image-available {
+      display: none;
+    }
+
+    &.no-image-available {
+      #upload-image-metadata, #image, #iqdb-similar {
+        display: none;
+      }
+
+      #no-image-available {
+        display: block !important;
+      }
+    }
+
+    &[data-image-size="small"] {
+      #image {
+        cursor: zoom-in;
+      }
+
+      a#upload-image-view-small {
+        font-weight: bold;
+      }
+    }
+
+    &[data-image-size="large"] {
+      #image {
+        cursor: zoom-out;
+      }
+
+      a#upload-image-view-large {
+        font-weight: bold;
+      }
+    }
+
+    &[data-image-size="full"] {
+      #image {
+        cursor: zoom-out;
+      }
+
+      a#upload-image-view-full {
+        font-weight: bold;
+      }
+    }
+
     .artist-commentary {
       margin-top: 1em;
     }
